# jolo

./: .gitignore  .jolo.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Containerfile  LICENSE  README.org  RESEARCH.org  STATUS.org  TODO.md  TODO.org  browser-check.js  distro.org  entrypoint.sh  jolo.py  justfile  motd  pyproject.toml  start-emacs.sh  test_jolo.py  yolo.py
.agents/: skills
.claude/: MEMORY.md  settings.local.json
.codex/: MEMORY.md
.devcontainer/: Dockerfile  devcontainer.json
.gemini/: MEMORY.md
.jolo/: skills
_jolo/: __init__.py  autonomous.py  cli.py  commands.py  constants.py  container.py  expose.py  justfile_parser.py  publish.py  registry.py  setup.py  templates.py  worktree.py
container/: agent-helpers.el  browser-check.js  db  dev.yml  (+13 more)
perf-host/: .gitignore  CHANGELOG.md  Caddyfile  Containerfile  README.md  docker-compose.yml  justfile  pyproject.toml
perf-host/docs/: bencher-integration.org
perf-host/grafana/dashboards/: k6-prometheus.json  perf-host-overview.json
perf-host/grafana/provisioning/dashboards/: dashboards.yml
perf-host/grafana/provisioning/datasources/: vm.yml
perf-host/speedscope/: index.html
perf-host/tests/: conftest.py  test_k6_script.py  test_schema.py
perf-host/trigger/: k6_script.py  ledger.py  main.py  schema.py
perf-host/trigger/rigs/: demo.toml
templates/lang/python/: coverage.toml  justfile  main.py  pyproject.toml  test_main.py  ty.toml
templates/lang/python/web/: app.py  justfile  main.py  pyproject.toml  test_main.py
templates/lang/python/web/templates/: base.html  home.html
(+212 files in other folders)
